--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dev_dependencies:
 
 
 flutter:
-  uses-material-design: true
+  uses-material-design: false
   assets:
     - assets/
     - assets/images/
