--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  bubble_bottom_bar: ^1.2.0
+  bloc: ^0.15.0
+  flutter_bloc: ^0.21.0
+  font_awesome_flutter: any
+  google_sign_in: ^4.0.1+1
+  cloud_firestore: ^0.9.7
+  equatable: ^0.2.0
+  firebase_auth: ^0.8.1+4
 
 dev_dependencies:
   flutter_test:
