--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Devfest Nyeri"
+        android:label="DevFest Nyeri"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
